--- a/BackendDomino/nbproject/project.properties
+++ b/BackendDomino/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/BackendDomino.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.gson-2.8.0.jar=libs\\gson-2.8.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.gson-2.8.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
